fix(VFooter): add missing border functionality

--- a/packages/vuetify/src/components/VFooter/VFooter.sass
+++ b/packages/vuetify/src/components/VFooter/VFooter.sass
@@ -9,7 +9,7 @@
   position: relative
 
   // missing from variables
-  // @include tools.border($footer-query)
+  @include tools.border($footer-border...)
   @include tools.elevation($footer-elevation)
   @include tools.position($footer-positions)
   @include tools.rounded($footer-border-radius)
